stop the logo from jumping around when there are no bread crumbs

--- a/BlazarUI/app/stylus/layout.styl
+++ b/BlazarUI/app/stylus/layout.styl
@@ -58,6 +58,7 @@ body
   top -4px
   z-index 3
   margin-right 10px
+  margin-top 5px
   
 .logo-image
   width 60px
